# ztm-ai

./: .gitignore  LICENSE  pyproject.toml  readme.md
data/bluebook-for-bulldozers/: annz_liner_model_test_predictions.csv  annz_test_predictions.csv
deep_learning/: end_to_end_dog_vision.ipynb  readme.md
matplotlib/: basic.ipynb
models/: heart-disease-gs-random-random-forest-model.pkl  heart-disease-rs-random-forest-model.joblib  random_forest_model_1.pkl
numpy/: basic.ipynb  img_to_array.ipynb
pandas/: basic.ipynb
sklearnMl/: choose_estimator.ipynb  evaluate_model.ipynb  fit_model_predict.ipynb  improve_model.ipynb  intro.ipynb  prepare_data.ipynb  put_all_together_pipeline.ipynb
supervised_learning/classification/: end-end-heart_disease_classification.ipynb
supervised_learning/time_series_data/: bulldozer_price_prediction.ipynb
